[package]
name = "process"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemInformation"
] }
